--- a/aesd-lcd/Makefile
+++ b/aesd-lcd/Makefile
@@ -1,13 +1,26 @@
+# Define the compiler
 CC = gcc
-CFLAGS = -Wall -Wextra -std=c99
-LDFLAGS =
 
+# Define compiler flags
+CFLAGS = -Wall -Wextra
+
+# Define the libraries to link against
+LIBS = -lwiringPi -lwiringPiDev
+
+# Define the source file
+SRC = aesd-lcd.c
+
+# Define the output executable
 TARGET = aesd-lcd
 
+# Default target
 all: $(TARGET)
 
-$(TARGET): $(TARGET).c
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+# Rule to compile the source file and link against libraries
+$(TARGET): $(SRC)
+	$(CC) $(CFLAGS) -o $(TARGET) $(SRC) $(LIBS)
 
+# Clean rule
 clean:
 	rm -f $(TARGET)
+
