makefile for all changed to cc

--- a/aesd-lcd/examples/Makefile
+++ b/aesd-lcd/examples/Makefile
@@ -28,7 +28,7 @@ endif
 
 #DEBUG	= -g -O0
 DEBUG	= -O3
-CC	?= gcc
+CC	?= $(CROSS_COMPILE)gcc
 INCLUDE	= -I/usr/local/include
 CFLAGS	= $(DEBUG) -Wall $(INCLUDE) -Winline -pipe $(EXTRA_CFLAGS)
 
