--- a/aesd-lcd/gpio/Makefile
+++ b/aesd-lcd/gpio/Makefile
@@ -32,7 +32,7 @@ endif
 
 #DEBUG	= -g -O0
 DEBUG	= -O2
-CC	?= gcc
+CC	?= $(CROSS_COMPILE)gcc
 INCLUDE	= -I$(DESTDIR)$(PREFIX)/include
 CFLAGS	= $(DEBUG) -Wall -Wextra $(INCLUDE) -Winline -pipe $(EXTRA_CFLAGS)
 
